[tool.poetry]
name = "libs"
version = "0.1.0"
description = ""
authors = ["Alvin Chen"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.1.0"
pytorch = "^1.0.2"
scipy = "^1.14.1"
scikit-learn = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
